--- a/Web/gate-keeper/public/index.html
+++ b/Web/gate-keeper/public/index.html
@@ -9,6 +9,9 @@
       content="Web site created using create-react-app"
     />
   
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>Remote-Gatekeeper</title>
   </head>
   <body>
