added the intro to the website

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -90,15 +90,21 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
-                                <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <p>Next Level Delevery Receiving</p>
+                                <h2>REAL WORLD PROBLEM</h2>
                             </div>
-                            <div class="about-text">
+                            <div class="about-text" >
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
+                                    In the busy and complicated lifestyle today, keeping interactions with outsiders is, inefficient, impractical and vulnerable. The ongoing pandemic has worsen the situatoin.
+                                </p>
+                                <p>
+                                    We have understood that people are having troubles with taking online deliveries to their door steps securely. Since people in Sri Lanka are so busy today, there is a good chance of not being in the house when an outsider or delivery person comes to the door.Therefore receiving the delivery is tricky at that kind of situation. Otherthan that , when an outsider comes to the door, if the parents are not home, it is not a good idea to expose the children and elder people to that outsider.We thought we can come up with a system of interconnected devices (inspired from IoT) to provide an efficient solution for those problems.
+                                </p>
+                                <p>
+                                    Our goal is to introduce a system, to communicate remotely with an outsider who is at our gate or to undertaking deliveries, without making physical interactions.
                                 </p>
                             </div>
-                            <div class="skills">
+                           <!--  <div class="skills">
                                 <div class="skill-name">
                                     <p>Web Design</p><p>85%</p>
                                 </div>
@@ -123,8 +129,8 @@
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                            </div>
-                            <a class="btn" href="">Learn More</a>
+                            </div> -->
+                            <!-- <a class="btn" href="">Learn More</a> -->
                         </div>
                     </div>
                 </div>
