added the components

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -28,7 +28,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">3YP</a>
+                <a href="index.html" class="navbar-brand">3YP(Group-19)</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -143,8 +143,8 @@
         <div class="service" id="service">
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>What I do</p>
-                    <h2>Awesome Quality Services</h2>
+                    <p>How it works</p>
+                    <h2>Components of the Sytem</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
@@ -153,9 +153,9 @@
                                 <i class="fa fa-laptop"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Web Design</h3>
+                                <h3>Control Unit</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    This is the main component of the system and all the cotrolling related to the system is done using this unit.Outsider interacts with this component.
                                 </p>
                             </div>
                         </div>
@@ -166,9 +166,9 @@
                                 <i class="fa fa-laptop-code"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Web Development</h3>
+                                <h3>Smart Mailbox</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    This is used to receive the delivery packages safely and this can be remotely controlled by the homeowner from anywhere in the world. 
                                 </p>
                             </div>
                         </div>
@@ -179,9 +179,9 @@
                                 <i class="fab fa-android"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Apps Design</h3>
+                                <h3>Smart Gate Locking</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    Remotely controlled by the homeowner to serve the request of the outsider and locking and unlocking of the gate is done using this. 
                                 </p>
                             </div>
                         </div>
@@ -192,14 +192,27 @@
                                 <i class="fab fa-apple"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Apps Development</h3>
+                                <h3>Mobile Application</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    Used by the homeowner and various features like capturing the photo of the outsider, intercom with the outsider and mailbox/gate controlling is handled using this.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
+                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class="fab fa-android"></i>
+                            </div>
+                            <div class="service-text">
+                                <h3>Web Interface</h3>
+                                <p>
+                                     Used to sign up, establish the connection between the system with the user account , download the mobile application and various other purposes.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
         <!-- Service End -->
