added the solution architecture

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -78,8 +78,8 @@
         <!-- Hero End -->
 
 
-        <!-- About Start -->
-        <div class="about wow fadeInUp" data-wow-delay="0.1s" id="about">
+        <!-- Problem Start -->
+        <div class="about wow fadeInUp" data-wow-delay="0.2s" id="about">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -136,10 +136,10 @@
                 </div>
             </div>
         </div>
-        <!-- About End -->
+        <!-- Problem End -->
         
         
-        <!-- Service Start -->
+        <!-- Component Start -->
         <div class="service" id="service">
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
@@ -215,7 +215,69 @@
                     </div>
             </div>
         </div>
-        <!-- Service End -->
+        <!-- Component End -->
+
+        <br><br><br>
+
+        <!-- Solution Architecture Start -->
+        <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-img">
+                            <img src="img/solution_architecture.png" alt="Image">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content">
+                            <div class="section-header text-left">
+                                <p>What happens under the hood</p>
+                                <h2>Solution Architecture</h2>
+                            </div>
+                            <div class="about-text" >
+                                <p>
+                                    This is a high level representation of our system and it shows how our system works.
+                                </p>
+                                <p>
+                                    All of the modules of our system is connected to the microprocessor Raspberry Pi 3 and it will be connected to the internet using built-in wifi module through the home wifi access point.
+                                </p>
+                                <p>
+                                    Then it would be connected to the backend of our system which is firebase.Backend transfer data to the mobile application and the web interface. Connecting and data sharing between the hardware front-end and two software front-end is the main goal of the backend.
+                                </p>
+                            </div>
+                           <!--  <div class="skills">
+                                <div class="skill-name">
+                                    <p>Web Design</p><p>85%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Web Development</p><p>95%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Apps Design</p><p>90%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Apps Development</p><p>85%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div> -->
+                            <!-- <a class="btn" href="">Learn More</a> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Solution Architecture End -->
 
         <h1 align="center">-----------seperate-----------<h1>
 
