added the soultion

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -90,18 +90,21 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
-                                <p>Next Level Delevery Receiving</p>
+                                <p>The motivation to our solution</p>
                                 <h2>REAL WORLD PROBLEM</h2>
                             </div>
                             <div class="about-text" >
                                 <p>
-                                    In the busy and complicated lifestyle today, keeping interactions with outsiders is, inefficient, impractical and vulnerable. The ongoing pandemic has worsen the situatoin.
+                                    In the busy and complicated lifestyle today, keeping interactions with outsiders is, inefficient, impractical and vulnerable. The ongoing pandemic has worsen the situation becase people are afraid to having physical intractions with outsiders.
                                 </p>
                                 <p>
-                                    We have understood that people are having troubles with taking online deliveries to their door steps securely. Since people in Sri Lanka are so busy today, there is a good chance of not being in the house when an outsider or delivery person comes to the door.Therefore receiving the delivery is tricky at that kind of situation. Otherthan that , when an outsider comes to the door, if the parents are not home, it is not a good idea to expose the children and elder people to that outsider.We thought we can come up with a system of interconnected devices (inspired from IoT) to provide an efficient solution for those problems.
+                                    We have understood that people are having troubles with taking online deliveries to their door steps securely. Since people in Sri Lanka are so busy today, there is a good chance of not being in the house when an outsider or delivery person comes to the door.If the homeowners are not at home , delivery people are adapt to keep the delivery outside the house.Therefore delivery package is subjected to get stolen or get damaged. 
                                 </p>
                                 <p>
-                                    Our goal is to introduce a system, to communicate remotely with an outsider who is at our gate or to undertaking deliveries, without making physical interactions.
+                                    Otherthan that , when an outsider comes to the door, if the parents are not home, it is not a good idea to expose the children and elder people to that outsider. It would be better if there is a way to communicate with the outsider when she/he is at the gate.(before entering to the house premise)
+                                </p>
+                                <p>
+                                    We thought we can come up with a system of interconnected devices (inspired from IoT) to provide an efficient solution for those problems.
                                 </p>
                             </div>
                            <!--  <div class="skills">
@@ -137,6 +140,25 @@
             </div>
         </div>
         <!-- Problem End -->
+
+
+        <!-- Solution Start -->
+        <div class="banner wow zoomIn" data-wow-delay="0.1s">
+            <div class="container">
+                <div class="section-header text-center">
+                    <p>Next level delivery receiving and gatekeeping</p>
+                    <h2>Our Solution</h2>
+                </div>
+                <div class="container banner-text">
+                    <p>
+                        Our solution is to introduce a system, to communicate remotely with an outsider who is at our gate or to undertaking deliveries, 
+                        without making physical interactions.
+                    </p>
+                    <a class="btn">Watch the video</a>
+                </div>
+            </div>
+        </div>
+        <!-- Solution End -->
         
         
         <!-- Component Start -->
