--- a/website-template/index.html
+++ b/website-template/index.html
@@ -301,6 +301,45 @@
         </div>
         <!-- Solution Architecture End -->
 
+        <br><br><br>
+
+        <!-- Cotrol flow Start -->
+        <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-img">
+                            <img src="img/Control-flow.png" alt="Image">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content">
+                            <div class="section-header text-left">
+                                <p>Data/Control signal distribution</p>
+                                <h2>Data and Control Flow</h2>
+                            </div>
+                            <div class="about-text" >
+                                <p>
+                                    This is a high level representation of our system and it shows how our the controlling and data transmission happens in the system.
+                                </p>
+                                <p>
+                                    <b style="color:purple" >Purple Lines :</b> Control Signals<br><br>
+                                    <b style="color:black" >Black Lines :  </b> Data Transmission
+                                </p>
+                                <p>
+                                   Control signals are supplied to all the modules that are connected to the Raspberry Pi3. Data is input to the Raspberry Pi by camera module, push button, usb microphone. The SD card is used to load the raspbian OS to the system and if there are any data to be stored, they are stored using SD card.
+                                </p>
+                                <p>
+                                   IoT device is connected to the backend of our system therefore obvously data sharing happens there. Using the backend , the data transmission between mobile application, web site and the IoT device is achieved.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Control Flow End -->
+
         <h1 align="center">-----------seperate-----------<h1>
 
          <!-- Experience Start -->
