added BOM and upadated footer

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -342,7 +342,7 @@
 
         <h1 align="center">-----------seperate-----------</h1>
 
-         <!-- Experience Start -->
+         <!-- Timeline Start -->
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
@@ -423,7 +423,67 @@
                 </div>
             </div>
         </div>
-        <!-- Job Experience End -->
+        <!-- Timeline End -->
+        
+        
+        <!-- BOM Start -->
+        <div class="banner wow zoomIn" data-wow-delay="0.1s">
+            <div class="container">
+                <div class="section-header text-center">
+                    <p>Proposed on Week 5</p>
+                    <h2>Bill of Material</h2>
+                </div>
+                <div class="table">
+                    <table align="center">
+                        <tr>
+                            <th>Description</th>
+                            <th>Price - LKR</th>
+                        </tr>
+                        <tr>
+                            <td>Rasberry Pi 3 (Model B)</td>
+                            <td>8000</td>
+                        </tr>
+                        <tr>
+                            <td>Raspberry Pi Camera Module</td>
+                            <td>3800</td>
+                        </tr>
+                        <tr>
+                            <td>Raspberry Pi LCD</td>
+                            <td>2500</td>
+                        </tr>
+                        <tr>
+                            <td>Speaker Module</td>
+                            <td>2000</td>
+                        </tr>
+                        <tr>
+                            <td>USB Microphone Module</td>
+                            <td>1000</td>
+                        </tr>
+                        <tr>
+                            <td>Servo Motor × 2</td>
+                            <td>1000</td>
+                        </tr>
+                        <tr>
+                            <td>Micro SD card</td>
+                            <td>850</td>
+                        </tr>
+                        <tr>
+                            <td>Power Adapter</td>
+                            <td>800</td>
+                        </tr>
+                        <tr>
+                            <td>Other Expenses (Push Buttons, Cables, etc.)</td>
+                            <td>1000</td>
+                        </tr>
+                        <tr>
+                            <th>Total</th>
+                            <th>20950</th>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <!-- BOM End -->
 
 
         <!-- Team Start -->
@@ -895,23 +955,28 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>Kate Winslet</h2>
-                        <h3>123 Street, New York, USA</h3>
-                        <div class="footer-menu">
+                        <h2>Contact Info</h2>
+                        <h3>+94 703135779 (Achintha) +94 701573862 (Ishara) +94 772561181 (Pubudu)</h3>
+                        <!-- <div class="footer-menu">
                             <p>+012 345 67890</p>
                             <p>info@example.com</p>
-                        </div>
-                        <div class="footer-social">
+                        </div> -->
+                        <!-- <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-youtube"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
                             <a href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p>
+                        <a href="https://ce.pdn.ac.lk/">Department of Computer Engineering</a><br>
+                        <a href="https://eng.pdn.ac.lk/">Faculty of Engineering</a><br>
+                        <a href="https://www.pdn.ac.lk/">University of Peradeniya</a><br>
+                    </p>
+                    <!-- <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p> -->
                 </div>
             </div>
         </div>
