edited prject web

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -185,7 +185,8 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa fa-laptop-code"></i>
+                                <i class="fa fa-microchip" ></i>
+
                             </div>
                             <div class="service-text">
                                 <h3>Smart Mailbox</h3>
@@ -307,11 +308,7 @@
         <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="about-img">
-                            <img src="img/Control-flow.png" alt="Image">
-                        </div>
-                    </div>
+                   
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
@@ -333,6 +330,12 @@
                                    IoT device is connected to the backend of our system therefore obvously data sharing happens there. Using the backend , the data transmission between mobile application, web site and the IoT device is achieved.
                                 </p>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="about-img">
+                            <img src="img/Control-flow.png" alt="Image">
                         </div>
                     </div>
                 </div>
@@ -502,9 +505,9 @@
                             <div class="team-text">
                                 <h2>Achintha Harshamal</h2>
                                 <h4>Computer Engineering UG</h4>
-                                <p>
+                                <!-- <p>
                                     Web App and Server Backend Developer
-                                </p>
+                                </p> -->
                                 <div class="team-social">
                                     <a class="btn" href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
@@ -519,9 +522,9 @@
                             <div class="team-text">
                                 <h2>Ishara Nawarathna</h2>
                                 <h4>Computer Engineering UG</h4>
-                                <p>
+                                <!-- <p>
                                     Mobile App Developer
-                                </p>
+                                </p> -->
                                 <div class="team-social">
                                     <a class="btn" href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
@@ -536,9 +539,9 @@
                             <div class="team-text">
                                 <h2>Pubudu Bandara</h2>
                                 <h4>Computer Engineering UG</h4>
-                                <p>
+                                <!-- <p>
                                     Microcontroller Environment Developer
-                                </p>
+                                </p> -->
                                 <div class="team-social">
                                     <a class="btn" href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
