--- a/website-template/index.html
+++ b/website-template/index.html
@@ -172,7 +172,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa fa-laptop"></i>
+                                <i class="fa fa-microchip" aria-hidden="true"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Control Unit</h3>
@@ -185,7 +185,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa fa-laptop-code"></i>
+                                <i class="fa fa-archive" aria-hidden="true"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Smart Mailbox</h3>
@@ -198,7 +198,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fab fa-android"></i>
+                                <i class="fa fa-lock" aria-hidden="true"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Smart Gate Locking</h3>
@@ -211,7 +211,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fab fa-apple"></i>
+                                <i class="fa fa-mobile" aria-hidden="true"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Mobile Application</h3>
@@ -225,7 +225,7 @@
                  <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fab fa-android"></i>
+                                <i class="fa fa-bandcamp" aria-hidden="true"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Web Interface</h3>
