--- a/website-template/index.html
+++ b/website-template/index.html
@@ -221,11 +221,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa fa-bandcamp" aria-hidden="true"></i>
+                                <i class="fa fa-desktop" aria-hidden="true"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Web Interface</h3>
@@ -235,6 +234,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
         <!-- Component End -->
@@ -307,11 +307,7 @@
         <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="about-img">
-                            <img src="img/Control-flow.png" alt="Image">
-                        </div>
-                    </div>
+                    
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
@@ -333,6 +329,11 @@
                                    IoT device is connected to the backend of our system therefore obvously data sharing happens there. Using the backend , the data transmission between mobile application, web site and the IoT device is achieved.
                                 </p>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-img">
+                            <img src="img/Control-flow.png" alt="Image">
                         </div>
                     </div>
                 </div>
@@ -494,7 +495,7 @@
                     <h2>Team Members</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-1.jpg" alt="Image">
@@ -511,7 +512,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-2.jpg" alt="Image">
@@ -528,7 +529,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 offset-lg-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-lg-4  wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-3.jpg" alt="Image">
@@ -550,7 +551,7 @@
                     <h2>Advisors</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
+                    <div class="col-lg-4 offset-lg-2 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-4.jpg" alt="Image">
@@ -564,7 +565,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-5.png" alt="Image">
