--- a/website-template/index.html
+++ b/website-template/index.html
@@ -36,12 +36,12 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="#home" class="nav-item nav-link active">Home</a>
-                        <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#service" class="nav-item nav-link">Service</a>
-                        <a href="#experience" class="nav-item nav-link">Experience</a>
-                        <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                        <a href="#about" class="nav-item nav-link">Intro</a>
+                        <a href="#service" class="nav-item nav-link">Components</a>
+                        <a href="#experience" class="nav-item nav-link">Timeline</a>
+                        <!-- <a href="#portfolio" class="nav-item nav-link">Portfolio</a> -->
                         <a href="#team" class="nav-item nav-link">Team</a>
-                        <a href="#contact" class="nav-item nav-link">Contact</a>
+                        <!-- <a href="#contact" class="nav-item nav-link">Contact</a> -->
                     </div>
                 </div>
             </div>
