befor merg the file

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -497,7 +497,7 @@
                     <h2>Team Members</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-1.jpg" alt="Image">
@@ -510,11 +510,12 @@
                                 </p> -->
                                 <div class="team-social">
                                     <a class="btn" href=""><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn" href=""><i class="fab fa-google"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-2.jpg" alt="Image">
@@ -531,7 +532,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 offset-lg-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-lg-4  wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-3.jpg" alt="Image">
@@ -553,7 +554,7 @@
                     <h2>Advisors</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
+                    <div class="col-lg-4 offset-lg-2 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-4.jpg" alt="Image">
@@ -567,14 +568,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-5.png" alt="Image">
                             </div>
                             <div class="team-text">
                                 <h2>Dr. Mahanama Wickramasinge</h2>
-                                <h4>Senior Lecturer <br> Department of CE</h4>
+                                <h4>Senior Lecturer Department of CE</h4>
                                 <div class="team-social">
                                     <a class="btn" href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
@@ -964,16 +965,17 @@
                             <p>+012 345 67890</p>
                             <p>info@example.com</p>
                         </div> -->
-                        <!-- <div class="footer-social">
+                         <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-youtube"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
                             <a href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div> -->
+                        </div> 
                     </div>
                 </div>
                 <div class="container copyright">
+                    
                     <p>
                         <a href="https://ce.pdn.ac.lk/">Department of Computer Engineering</a><br>
                         <a href="https://eng.pdn.ac.lk/">Faculty of Engineering</a><br>
