--- a/website-template/index.html
+++ b/website-template/index.html
@@ -8,7 +8,7 @@
         <meta content="Free Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="img/crest.png" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -341,7 +341,114 @@
         </div>
         <!-- Control Flow End -->
 
+        <!-- Mobile UI Start -->
+        <div class="portfolio" id="portfolio">
+            <div class="container">
+                <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+                    <p>UX-UI Design</p>
+                    <h2>Mobile Application</h2>
+                </div>
+                <!--<div class="row">
+                    <div class="col-12">
+                        <ul id="portfolio-filter">
+                            <li data-filter="*" class="filter-active">All</li>
+                            <li data-filter=".filter-1">Web Design</li>
+                            <li data-filter=".filter-2">Mobile Apps</li>
+                            <li data-filter=".filter-3">Game Dev</li>
+                        </ul>
+                    </div>
+                </div>-->
+                <div class="row portfolio-container">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/mobile-ui1.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Login Screen</h3>
+                                <a class="btn" href="img/mobile-ui1.png" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/mobile-ui2.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Welcome Screen</h3>
+                                <a class="btn" href="img/mobile-ui2.png" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/mobile-ui3.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Active Event</h3>
+                                <a class="btn" href="img/mobile-ui3.png" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/mobile-ui4.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Close Active Event</h3>
+                                <a class="btn" href="img/mobile-ui4.png" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/mobile-ui5.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Previous Events</h3>
+                                <a class="btn" href="img/mobile-ui5.png" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/mobile-ui6.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Previous Event Info</h3>
+                                <a class="btn" href="img/mobile-ui6.png" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+        <!-- Mobile UI End -->
 
+        <!-- Algorithms Start -->
+        <div class="experience" id="experience">
+            <div class="container">
+                <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+                    <h2>Algorithms of the System</h2><br>
+                    <p>Algorithm runs on the hardware module</p>
+                </header>
+            </div>
+            <img src="img/hardware-flow-new.png" width="80%" style="display: block; margin-left: auto; margin-right: auto; width: 90%;" alt="Image">
+            <div class="container">
+                <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+                    <br><br><br><p>Algorithm runs on the Mobile Application</p>
+                </header>
+            </div>
+            <img src="img/mobile-app-flow-diagram.png" width="80%" style="display: block; margin-left: auto; margin-right: auto; width: 80%;" alt="Image">
+        </div>
+        <!-- Algorithms End -->
+
+    
          <!-- Timeline Start -->
         <div class="experience" id="experience">
             <div class="container">
