--- a/website-template/index.html
+++ b/website-template/index.html
@@ -613,6 +613,7 @@
                                 <div class="team-social">
                                     <a class="btn" href="https://www.linkedin.com/in/achintha-harshamal-ab7b6b1a5/"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn" href="mailto:achinthafharshamal@gmail.com"><i class="fab fa-google"></i></a>
+                                    <a class="btn" href="https://github.com/AchinthaHarshamal"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -629,6 +630,7 @@
                                 <div class="team-social">
                                     <a class="btn" href="https://www.linkedin.com/in/ishara-nawarathna-4a88a11a7/"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn" href="mailto:yc.ishara@gmail.com"><i class="fab fa-google"></i></a>
+                                    <a class="btn" href="https://github.com/IsharaNawarathna"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -645,6 +647,7 @@
                                 <div class="team-social">
                                     <a class="btn" href="https://www.linkedin.com/in/pubudu-bandara-592a381a8/"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="btn" href="mailto:pubuducb@gmail.com"><i class="fab fa-google"></i></a>
+                                    <a class="btn" href="https://github.com/pubuducb"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -664,6 +667,7 @@
                                 <h4>Senior Lecturer <br> Department of CE</h4>
                                 <div class="team-social">
                                     <a class="btn" href="https://www.linkedin.com/in/isuru-nawinne-73302833/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn" href="mailto:isurunawinne@eng.pdn.ac.lk"><i class="fab fa-google"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -678,6 +682,7 @@
                                 <h4>Senior Lecturer Department of CE</h4>
                                 <div class="team-social">
                                     <a class="btn" href="https://www.linkedin.com/in/mahanama/"><i class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn" href="mailto:mahanamaw@eng.pdn.ac.lk"><i class="fab fa-google"></i></a>
                                 </div>
                             </div>
                         </div>
