added new materials to the website template

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -341,6 +341,71 @@
         </div>
         <!-- Control Flow End -->
 
+        <!-- Solution Architecture Start -->
+        <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-img">
+                            <img src="img/block-diagram.png" alt="Image">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content">
+                            <div class="section-header text-left">
+                                <p>Blocks and Components</p>
+                                <h2>Block Diagram</h2>
+                            </div>
+                            <div class="about-text" >
+                                <p>
+                                    This figure shows how various components of our system interconnected.
+                                </p>
+                                <p>
+                                    All the controling mechanisms are handled by the control unit of our system. When the homeowner wants to open up the smart mailbox , a control signal will be send to 
+                                    the control unit and control unit will send a control signal to the smart mailbox and it will be opened. This exact behaviour is applied for the smart gatelock as well. 
+                                    The control unit is going to connected to the power supply adapter and will get power from the wall plug. Then the power required for smart mailbox and smart gatelock 
+                                    will be provided by the control unit itself.
+                                    
+                                    
+                                </p>
+                                <p>
+                                    Then it would be connected to the backend of our system which is firebase.Backend transfer data to the mobile application and the web interface. Connecting and data sharing between the hardware front-end and two software front-end is the main goal of the backend.
+                                </p>
+                            </div>
+                           <!--  <div class="skills">
+                                <div class="skill-name">
+                                    <p>Web Design</p><p>85%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Web Development</p><p>95%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Apps Design</p><p>90%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Apps Development</p><p>85%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div> -->
+                            <!-- <a class="btn" href="">Learn More</a> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Solution Architecture End -->
+
         <!-- Mobile UI Start -->
         <div class="portfolio" id="portfolio">
             <div class="container">
@@ -510,7 +575,7 @@
         </div> -->
         <!-- 3D Model End -->
 
-        <!-- Circuti Diagram Start -->
+        <!-- Circuit Diagram Start -->
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
@@ -1038,13 +1103,13 @@
                             <p>+012 345 67890</p>
                             <p>info@example.com</p>
                         </div> -->
-                         <div class="footer-social">
+                         <!-- <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-youtube"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a>
                             <a href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div> 
+                        </div>  -->
                     </div>
                 </div>
                 <div class="container copyright">
