corrected the syntax error in the project page

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -632,7 +632,7 @@
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/lcd2.jpg" width="200" height="455" alt="Blog">
-                
+                            </div>
                             <div class="blog-text">
                                 <h2>16 x 2 LCD (CM 162-4)</h2>
                                 <p>Affordable</p>
@@ -662,7 +662,7 @@
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mic.jpg" width="200" height="400" alt="Blog">
-                
+                            </div>
                             <div class="blog-text">
                                 <h2>Mini USB Microphone (Adafruit 3367)</h2>
                                 <p>Very reliable for voice recording, which allows optimum communication in Intercom</p>
