--- a/website-template/index.html
+++ b/website-template/index.html
@@ -822,6 +822,105 @@
         <!-- BOM End -->
 
 
+        <!-- Testing Start -->
+        <div class="banner wow zoomIn" data-wow-delay="0.1s">
+            <div class="container" style="max-width: 90%;">
+                <div class="section-header text-center">
+                    <h2>Testing</h2><br>
+                    <p style="color: white; font-size: 18px; text-transform: none;">
+                        Full test results can be found in the 
+                        <a href="https://github.com/cepdnaclk/e17-3yp-Remote-Gatekeeping-System/blob/main/Testing/TESTING.md#testing" target="_blank">GitHub Repository</a>
+                    </p><br><br>
+                    <p style="font-size: 24px;">
+                        Functionalaties of<br>the Administrative Web Service
+                    </p>
+                    <br>
+                    <p style="color: white; font-size: 20px; text-transform: none;">
+                        Type : Automated&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Framework : Selenium&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Porgramming Languge : Python
+                    </p>
+                </div>
+                <div class="table">
+                    <table align="center" style="text-align: left; font-size: 20px;">
+                        <tr>
+                            <th>Test</th>
+                            <th>Description</th>
+                            <th>Purpose</th>
+                            <th>Expected Results</th>
+                            <th>Result</th>
+                        </tr>
+                        <tr>
+                            <td>User Login (i)</td>
+                            <td>Use logoing with correct email and password</td>
+                            <td>Check the user loging with with correct credentials</td>
+                            <td>Successful login to the system, Initial message of the History Table , Correct User name and the email appear on the Dashboard</td>
+                            <td>Pass</td>
+                        </tr>
+                        <tr>
+                            <td>User Login (ii)</td>
+                            <td>User loging with wrong email or password</td>
+                            <td>Try to use loging with wrong credential</td>
+                            <td>Blocking the invalid users</td>
+                            <td>Pass</td>
+                        </tr>
+                        <tr>
+                            <td>Device Initializtion (i)</td>
+                            <td>Device initialize with correct serial number & Valid use information</td>
+                            <td>Check whether the initialzaton work correct or not</td>
+                            <td>Successful signup to valid-user</td>
+                            <td>Pass</td>
+                        </tr>
+                        <tr>
+                            <td>Device Initializtion (ii)</td>
+                            <td>Device initialize with incorrect serial number</td>
+                            <td>Check whether the initialztion work with incorrect serial or not</td>
+                            <td>Unable to sign up an invalid user</td>
+                            <td>Pass</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="section-header text-center">
+                    <p style="font-size: 24px;">
+                        Secutiry Fetures of<br>Backend & Frontend
+                    </p>
+                    <br>
+                    <p style="color: white; font-size: 20px; text-transform: none;">
+                        Type : Manual and Automated&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        Framework, Simulators & Libraris : Rules Playground - Firebase
+                    </p>
+                </div>
+                <div class="table">
+                    <table align="center" style="text-align: left; font-size: 20px;">
+                        <tr>
+                            <th>Test</th>
+                            <th>Description</th>
+                            <th>Purpose</th>
+                            <th>Expected Results</th>
+                            <th>Result</th>
+                        </tr>
+                        <tr>
+                            <td>Malicious user login</td>
+                            <td>Brute Forcing passwords</td>
+                            <td>Checking the security againsts the malicious access</td>
+                            <td>Security against the malicious access Blocking the selected email after a few unsuccessful attempts for a time period</td>
+                            <td>Pass</td>
+                        </tr>
+                        <tr>
+                            <td>Datebase Access (i)</td>
+                            <td>CRUD operations on the Users , Messages , InitNodes , Evernts , Nodes collections</td>
+                            <td>To fine-grain tuning the outside access to the database</td>
+                            <td>Users - read and write access, authenticated users only for their collection.<br><br>
+                                Nodes - Read access to any outside users, write access only to authenticate users for their collection</td>
+                            <td>Pass</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <!-- Testing End -->
+
+
         <!-- Team Start -->
         <div class="team" id="team">
             <div class="container">
